# axum-example

./: Cargo.toml  README.md
assets/: app.css
src/: main.rs
templates/: index.html
