[package]
name = "axum-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.7"
lazy_static = "1.4"
tera = { version = "1.19", default-features = false }
tokio = { version = "1.35", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
